<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/settings_sync_category">
    <CheckBoxPreference
        android:title="@string/prefs_auto_sync_title"
        android:summary="@string/prefs_auto_sync_summary"
        android:key="key_auto_sync"/>
    <SwitchPreference
        android:title="@string/prefs_sync_wifi"
        android:summary="@string/prefs_sync_wifi_summary"
        android:key="key_auto_sync_wifi"
        android:dependency="key_auto_sync"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/settings_topic_category">
    <MultiSelectListPreference
        android:title="@string/prefs_topic_title"
        android:summary="@string/prefs_topic_summary"
        android:key="key_selected_topics"
        android:entries="@array/topics_labels"
        android:entryValues="@array/topics_codes"/>
    <EditTextPreference
        android:title="@string/settings_comment_nickname_label"
        android:summary="@string/settings_comment_nickname_summary"
        android:key="prefs_comment_nickname"/>
  </PreferenceCategory>
</PreferenceScreen>